// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`semantic game-view renderers > renders a board-first authored event choice 1`] = `
{
  "numeric": [
    [
      0,
      0,
      0,
      0,
      0,
      0,
      19,
      15,
      12,
      9,
      4,
      0,
      4,
      15,
      15,
      18,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      1,
      0,
      19,
      15,
      12,
      9,
      4,
      0,
      4,
      15,
      15,
      18,
      0,
      23,
      1,
      9,
      20,
      19,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      27,
      0,
      2,
      1,
      19,
      8,
      0,
      20,
      8,
      5,
      0,
      4,
      15,
      15,
      18,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      28,
      0,
      12,
      9,
      19,
      20,
      5,
      14,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      29,
      0,
      12,
      5,
      1,
      22,
      5,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  ],
  "readable": [
    "······SOLID·DOOR······",
    "A·SOLID·DOOR·WAITS····",
    "······················",
    "1·BASH·THE·DOOR·······",
    "2·LISTEN··············",
    "3·LEAVE···············",
  ],
}
`;

exports[`semantic game-view renderers > renders a discovered dead end without moving the current marker 1`] = `
{
  "numeric": [
    [
      18,
      15,
      7,
      21,
      5,
      0,
      12,
      27,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      13,
      1,
      16,
      0,
      0,
      0,
      0,
    ],
    [
      8,
      16,
      30,
      59,
      30,
      0,
      69,
      69,
      69,
      69,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      16,
      15,
      23,
      29,
      0,
      4,
      5,
      6,
      29,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      19,
      11,
      9,
      12,
      12,
      31,
      0,
      12,
      11,
      31,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      18,
      13,
      27,
      0,
      8,
      5,
      1,
      12,
      50,
      27,
      0,
      0,
      65,
      60,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      27,
      14,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      66,
      38,
      63,
      24,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  ],
  "readable": [
    "ROGUE·L1·······MAP····",
    "HP4/4·wwww············",
    "POW3·DEF3·············",
    "SKILL5·LK5············",
    "RM1·HEAL:1··y?········",
    "1N··········g@rX······",
  ],
}
`;

exports[`semantic game-view renderers > renders a healing result before the enemy response 1`] = `
{
  "numeric": [
    [
      0,
      0,
      0,
      0,
      0,
      8,
      5,
      1,
      12,
      5,
      4,
      0,
      28,
      0,
      8,
      16,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      23,
      9,
      26,
      1,
      18,
      4,
      0,
      8,
      16,
      29,
      59,
      30,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      69,
      69,
      69,
      63,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      8,
      5,
      1,
      12,
      9,
      14,
      7,
      0,
      4,
      18,
      1,
      21,
      7,
      8,
      20,
      0,
      21,
      19,
      5,
      4,
      0,
    ],
  ],
  "readable": [
    "·····HEALED·2·HP······",
    "······················",
    "·····WIZARD·HP3/4·····",
    "·········wwwr·········",
    "······················",
    "·HEALING·DRAUGHT·USED·",
  ],
}
`;

exports[`semantic game-view renderers > renders a healing result before the enemy response 2`] = `
{
  "numeric": [
    [
      0,
      0,
      0,
      0,
      0,
      8,
      5,
      1,
      12,
      5,
      4,
      0,
      28,
      0,
      8,
      16,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      23,
      9,
      26,
      1,
      18,
      4,
      0,
      8,
      16,
      29,
      59,
      30,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      70,
      70,
      70,
      63,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      8,
      5,
      1,
      12,
      9,
      14,
      7,
      0,
      4,
      18,
      1,
      21,
      7,
      8,
      20,
      0,
      21,
      19,
      5,
      4,
      0,
    ],
  ],
  "readable": [
    "·····HEALED·2·HP······",
    "······················",
    "·····WIZARD·HP3/4·····",
    "·········kkkr·········",
    "······················",
    "·HEALING·DRAUGHT·USED·",
  ],
}
`;

exports[`semantic game-view renderers > renders a stolen-loot replacement choice 1`] = `
{
  "numeric": [
    [
      0,
      0,
      0,
      0,
      0,
      19,
      20,
      15,
      12,
      5,
      14,
      0,
      12,
      15,
      15,
      20,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      7,
      8,
      15,
      21,
      12,
      0,
      6,
      1,
      14,
      7,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      23,
      5,
      1,
      16,
      15,
      14,
      0,
      46,
      27,
      0,
      16,
      15,
      23,
      5,
      18,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      3,
      21,
      18,
      18,
      5,
      14,
      20,
      50,
      0,
      7,
      8,
      15,
      21,
      12,
      0,
      6,
      1,
      14,
      7,
      0,
      0,
    ],
    [
      27,
      0,
      5,
      17,
      21,
      9,
      16,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      28,
      0,
      12,
      5,
      1,
      22,
      5,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  ],
  "readable": [
    "·····STOLEN·LOOT······",
    "······GHOUL·FANG······",
    "···WEAPON·+1·POWER····",
    "·CURRENT:·GHOUL·FANG··",
    "1·EQUIP···············",
    "2·LEAVE···············",
  ],
}
`;

exports[`semantic game-view renderers > renders a trap death as a complete board epitaph 1`] = `
{
  "numeric": [
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      25,
      15,
      21,
      0,
      4,
      9,
      5,
      4,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      2,
      25,
      0,
      20,
      18,
      1,
      16,
      19,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      3,
      12,
      1,
      19,
      19,
      50,
      0,
      18,
      15,
      7,
      21,
      5,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      18,
      15,
      15,
      13,
      19,
      0,
      6,
      15,
      21,
      14,
      4,
      50,
      0,
      30,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      5,
      14,
      5,
      13,
      9,
      5,
      19,
      0,
      19,
      12,
      1,
      9,
      14,
      50,
      0,
      27,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      18,
      15,
      15,
      13,
      19,
      0,
      21,
      14,
      20,
      9,
      12,
      0,
      5,
      24,
      9,
      20,
      50,
      0,
      31,
      0,
      0,
      0,
    ],
  ],
  "readable": [
    "·······YOU·DIED·······",
    "BY·TRAPS··············",
    "CLASS:·ROGUE··········",
    "ROOMS·FOUND:·4········",
    "ENEMIES·SLAIN:·1······",
    "ROOMS·UNTIL·EXIT:·5···",
  ],
}
`;

exports[`semantic game-view renderers > renders actual opposed-roll scaffolds and results with period trails 1`] = `
{
  "numeric": [
    [
      23,
      9,
      26,
      1,
      18,
      4,
      0,
      19,
      11,
      9,
      12,
      12,
      0,
      29,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      4,
      32,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      19,
      11,
      5,
      12,
      0,
      11,
      14,
      9,
      7,
      8,
      20,
      0,
      19,
      11,
      9,
      12,
      12,
      0,
      28,
      0,
      0,
      0,
    ],
    [
      4,
      32,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      18,
      15,
      12,
      12,
      0,
      6,
      15,
      18,
      0,
      9,
      14,
      9,
      20,
      9,
      1,
      20,
      9,
      22,
      5,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  ],
  "readable": [
    "WIZARD·SKILL·3········",
    "D6····················",
    "SKEL·KNIGHT·SKILL·2···",
    "D6····················",
    "·ROLL·FOR·INITIATIVE··",
    "······················",
  ],
}
`;

exports[`semantic game-view renderers > renders actual opposed-roll scaffolds and results with period trails 2`] = `
{
  "numeric": [
    [
      23,
      9,
      26,
      1,
      18,
      4,
      0,
      19,
      11,
      9,
      12,
      12,
      0,
      29,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      4,
      32,
      0,
      56,
      56,
      56,
      56,
      0,
      30,
      46,
      29,
      48,
      33,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      19,
      11,
      5,
      12,
      0,
      11,
      14,
      9,
      7,
      8,
      20,
      0,
      19,
      11,
      9,
      12,
      12,
      0,
      28,
      0,
      0,
      0,
    ],
    [
      4,
      32,
      0,
      56,
      56,
      56,
      56,
      0,
      31,
      46,
      28,
      48,
      33,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      18,
      15,
      12,
      12,
      0,
      6,
      15,
      18,
      0,
      9,
      14,
      9,
      20,
      9,
      1,
      20,
      9,
      22,
      5,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      6,
      9,
      18,
      19,
      20,
      50,
      0,
      23,
      9,
      26,
      1,
      18,
      4,
      0,
      0,
      0,
      0,
      0,
    ],
  ],
  "readable": [
    "WIZARD·SKILL·3········",
    "D6·....·4+3=7·········",
    "SKEL·KNIGHT·SKILL·2···",
    "D6·....·5+2=7·········",
    "·ROLL·FOR·INITIATIVE··",
    "····FIRST:·WIZARD·····",
  ],
}
`;

exports[`semantic game-view renderers > renders an event check against generic danger with Luck 1`] = `
{
  "numeric": [
    [
      18,
      15,
      7,
      21,
      5,
      0,
      12,
      21,
      3,
      11,
      0,
      31,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      4,
      32,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      4,
      1,
      14,
      7,
      5,
      18,
      0,
      30,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      4,
      32,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      19,
      5,
      1,
      18,
      3,
      8,
      0,
      20,
      8,
      5,
      0,
      4,
      1,
      18,
      11,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  ],
  "readable": [
    "ROGUE·LUCK·5··········",
    "D6····················",
    "DANGER·4··············",
    "D6····················",
    "···SEARCH·THE·DARK····",
    "······················",
  ],
}
`;

exports[`semantic game-view renderers > renders an event check against generic danger with Luck 2`] = `
{
  "numeric": [
    [
      18,
      15,
      7,
      21,
      5,
      0,
      12,
      21,
      3,
      11,
      0,
      31,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      4,
      32,
      0,
      56,
      56,
      56,
      56,
      0,
      30,
      46,
      31,
      48,
      35,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      4,
      1,
      14,
      7,
      5,
      18,
      0,
      30,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      4,
      32,
      0,
      56,
      56,
      56,
      56,
      0,
      28,
      46,
      30,
      48,
      32,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      19,
      5,
      1,
      18,
      3,
      8,
      0,
      20,
      8,
      5,
      0,
      4,
      1,
      18,
      11,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      25,
      15,
      21,
      0,
      6,
      9,
      14,
      4,
      0,
      1,
      0,
      3,
      12,
      21,
      5,
      0,
      0,
      0,
      0,
    ],
  ],
  "readable": [
    "ROGUE·LUCK·5··········",
    "D6·....·4+5=9·········",
    "DANGER·4··············",
    "D6·....·2+4=6·········",
    "···SEARCH·THE·DARK····",
    "···YOU·FIND·A·CLUE····",
  ],
}
`;

exports[`semantic game-view renderers > renders class selection with numbered choices and provisional values 1`] = `
{
  "numeric": [
    [
      3,
      12,
      1,
      19,
      19,
      0,
      0,
      0,
      0,
      0,
      0,
      8,
      16,
      0,
      16,
      0,
      4,
      0,
      19,
      0,
      12,
      0,
    ],
    [
      27,
      0,
      23,
      1,
      18,
      18,
      9,
      15,
      18,
      0,
      0,
      31,
      0,
      31,
      0,
      30,
      0,
      28,
      0,
      28,
      0,
      0,
    ],
    [
      28,
      0,
      18,
      15,
      7,
      21,
      5,
      0,
      0,
      0,
      0,
      30,
      0,
      29,
      0,
      29,
      0,
      31,
      0,
      31,
      0,
      0,
    ],
    [
      29,
      0,
      23,
      9,
      26,
      1,
      18,
      4,
      0,
      0,
      0,
      29,
      0,
      31,
      0,
      28,
      0,
      29,
      0,
      30,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      19,
      5,
      12,
      5,
      3,
      20,
      0,
      3,
      8,
      1,
      18,
      1,
      3,
      20,
      5,
      18,
      0,
      0,
      0,
    ],
  ],
  "readable": [
    "CLASS······HP·P·D·S·L·",
    "1·WARRIOR··5·5·4·2·2··",
    "2·ROGUE····4·3·3·5·5··",
    "3·WIZARD···3·5·2·3·4··",
    "······················",
    "···SELECT·CHARACTER···",
  ],
}
`;

exports[`semantic game-view renderers > renders class-specific battle loot against an empty slot 1`] = `
{
  "numeric": [
    [
      0,
      0,
      0,
      0,
      0,
      2,
      1,
      20,
      20,
      12,
      5,
      0,
      12,
      15,
      15,
      20,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      9,
      18,
      15,
      14,
      0,
      19,
      23,
      15,
      18,
      4,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      23,
      5,
      1,
      16,
      15,
      14,
      0,
      46,
      27,
      0,
      16,
      15,
      23,
      5,
      18,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      3,
      21,
      18,
      18,
      5,
      14,
      20,
      50,
      0,
      5,
      13,
      16,
      20,
      25,
      0,
      0,
      0,
      0,
    ],
    [
      27,
      0,
      5,
      17,
      21,
      9,
      16,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      28,
      0,
      12,
      5,
      1,
      22,
      5,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  ],
  "readable": [
    "·····BATTLE·LOOT······",
    "······IRON·SWORD······",
    "···WEAPON·+1·POWER····",
    "····CURRENT:·EMPTY····",
    "1·EQUIP···············",
    "2·LEAVE···············",
  ],
}
`;

exports[`semantic game-view renderers > renders the Ancient Library search choice across the room 1`] = `
{
  "numeric": [
    [
      0,
      0,
      0,
      1,
      14,
      3,
      9,
      5,
      14,
      20,
      0,
      12,
      9,
      2,
      18,
      1,
      18,
      25,
      0,
      0,
      0,
      0,
    ],
    [
      20,
      8,
      5,
      0,
      19,
      8,
      5,
      12,
      22,
      5,
      19,
      0,
      23,
      8,
      9,
      19,
      16,
      5,
      18,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      27,
      0,
      19,
      5,
      1,
      18,
      3,
      8,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      28,
      0,
      12,
      5,
      1,
      22,
      5,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  ],
  "readable": [
    "···ANCIENT·LIBRARY····",
    "THE·SHELVES·WHISPER···",
    "······················",
    "······················",
    "1·SEARCH··············",
    "2·LEAVE···············",
  ],
}
`;

exports[`semantic game-view renderers > renders the Wizard scroll pouch with Cancel as navigation 1`] = `
{
  "numeric": [
    [
      0,
      0,
      0,
      0,
      0,
      19,
      3,
      18,
      15,
      12,
      12,
      0,
      16,
      15,
      21,
      3,
      8,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      22,
      19,
      0,
      7,
      8,
      15,
      21,
      12,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      27,
      0,
      6,
      9,
      18,
      5,
      2,
      1,
      12,
      12,
      0,
      24,
      27,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      28,
      0,
      12,
      9,
      7,
      8,
      20,
      14,
      9,
      14,
      7,
      0,
      24,
      27,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      29,
      0,
      19,
      20,
      21,
      14,
      0,
      24,
      27,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      30,
      0,
      3,
      1,
      14,
      3,
      5,
      12,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  ],
  "readable": [
    "·····SCROLL·POUCH·····",
    "·······VS·GHOUL·······",
    "1·FIREBALL·X1·········",
    "2·LIGHTNING·X1········",
    "3·STUN·X1·············",
    "4·CANCEL··············",
  ],
}
`;

exports[`semantic game-view renderers > renders the live combat menu with both HP bars and legal actions 1`] = `
{
  "numeric": [
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      7,
      8,
      15,
      21,
      12,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      8,
      16,
      28,
      59,
      28,
      0,
      69,
      69,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      23,
      1,
      18,
      18,
      9,
      15,
      18,
      0,
      12,
      28,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      8,
      16,
      31,
      59,
      31,
      0,
      69,
      69,
      69,
      69,
      69,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      27,
      0,
      1,
      20,
      20,
      1,
      3,
      11,
      0,
      0,
      0,
      28,
      0,
      19,
      13,
      1,
      19,
      8,
      0,
      0,
      0,
      0,
    ],
    [
      29,
      0,
      18,
      21,
      14,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  ],
  "readable": [
    "········GHOUL·········",
    "·····HP2/2·ww·········",
    "······WARRIOR·L2······",
    "·····HP5/5·wwwww······",
    "1·ATTACK···2·SMASH····",
    "3·RUN·················",
  ],
}
`;

exports[`semantic game-view renderers > renders the live combat menu with both HP bars and legal actions 2`] = `
{
  "numeric": [
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      7,
      8,
      15,
      21,
      12,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      8,
      16,
      28,
      59,
      28,
      0,
      70,
      70,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      23,
      1,
      18,
      18,
      9,
      15,
      18,
      0,
      12,
      28,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      8,
      16,
      31,
      59,
      31,
      0,
      70,
      70,
      70,
      70,
      70,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      27,
      0,
      1,
      20,
      20,
      1,
      3,
      11,
      0,
      0,
      0,
      28,
      0,
      19,
      13,
      1,
      19,
      8,
      0,
      0,
      0,
      0,
    ],
    [
      29,
      0,
      18,
      21,
      14,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  ],
  "readable": [
    "········GHOUL·········",
    "·····HP2/2·kk·········",
    "······WARRIOR·L2······",
    "·····HP5/5·kkkkk······",
    "1·ATTACK···2·SMASH····",
    "3·RUN·················",
  ],
}
`;

exports[`semantic game-view renderers > renders the live exploration HUD on black and white shells 1`] = `
{
  "numeric": [
    [
      23,
      1,
      18,
      18,
      9,
      15,
      18,
      0,
      12,
      27,
      0,
      0,
      0,
      0,
      0,
      13,
      1,
      16,
      0,
      0,
      0,
      0,
    ],
    [
      8,
      16,
      31,
      59,
      31,
      0,
      69,
      69,
      69,
      69,
      69,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      16,
      15,
      23,
      31,
      0,
      4,
      5,
      6,
      30,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      19,
      11,
      9,
      12,
      12,
      28,
      0,
      12,
      11,
      28,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      18,
      13,
      27,
      0,
      8,
      5,
      1,
      12,
      50,
      27,
      0,
      0,
      65,
      60,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      27,
      14,
      0,
      28,
      5,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      66,
      38,
      65,
      60,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  ],
  "readable": [
    "WARRIOR·L1·····MAP····",
    "HP5/5·wwwww···········",
    "POW5·DEF4·············",
    "SKILL2·LK2············",
    "RM1·HEAL:1··y?········",
    "1N·2E·······g@y?······",
  ],
}
`;

exports[`semantic game-view renderers > renders the live exploration HUD on black and white shells 2`] = `
{
  "numeric": [
    [
      23,
      1,
      18,
      18,
      9,
      15,
      18,
      0,
      12,
      27,
      0,
      0,
      0,
      0,
      0,
      13,
      1,
      16,
      0,
      0,
      0,
      0,
    ],
    [
      8,
      16,
      31,
      59,
      31,
      0,
      70,
      70,
      70,
      70,
      70,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      16,
      15,
      23,
      31,
      0,
      4,
      5,
      6,
      30,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      19,
      11,
      9,
      12,
      12,
      28,
      0,
      12,
      11,
      28,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      18,
      13,
      27,
      0,
      8,
      5,
      1,
      12,
      50,
      27,
      0,
      0,
      65,
      60,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      27,
      14,
      0,
      28,
      5,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      66,
      38,
      65,
      60,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  ],
  "readable": [
    "WARRIOR·L1·····MAP····",
    "HP5/5·kkkkk···········",
    "POW5·DEF4·············",
    "SKILL2·LK2············",
    "RM1·HEAL:1··y?········",
    "1N·2E·······g@y?······",
  ],
}
`;

exports[`semantic game-view renderers > renders the non-actionable title presentation exactly 1`] = `
{
  "numeric": [
    [
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      22,
      5,
      19,
      20,
      1,
      17,
      21,
      5,
      19,
      20,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      1,
      0,
      22,
      5,
      19,
      20,
      1,
      2,
      15,
      1,
      18,
      4,
      0,
      18,
      16,
      7,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
    ],
  ],
  "readable": [
    "wwwwwwwwwwwwwwwwwwwwww",
    "······················",
    "······VESTAQUEST······",
    "···A·VESTABOARD·RPG···",
    "······················",
    "wwwwwwwwwwwwwwwwwwwwww",
  ],
}
`;

exports[`semantic game-view renderers > renders the provisional exit outcome after the hidden room is found 1`] = `
{
  "numeric": [
    [
      0,
      0,
      0,
      0,
      0,
      25,
      15,
      21,
      0,
      5,
      19,
      3,
      1,
      16,
      5,
      4,
      37,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      3,
      12,
      1,
      19,
      19,
      50,
      0,
      23,
      1,
      18,
      18,
      9,
      15,
      18,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      18,
      15,
      15,
      13,
      19,
      0,
      6,
      15,
      21,
      14,
      4,
      50,
      0,
      27,
      36,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      5,
      14,
      5,
      13,
      9,
      5,
      19,
      0,
      19,
      12,
      1,
      9,
      14,
      50,
      0,
      29,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  ],
  "readable": [
    "·····YOU·ESCAPED!·····",
    "CLASS:·WARRIOR········",
    "ROOMS·FOUND:·10·······",
    "ENEMIES·SLAIN:·3······",
    "······················",
    "······················",
  ],
}
`;
